[Frontend] Fix alignment bug
Introduced in 25d13ca3d1d90b854c33c909b4223eb90e96d3b3. Shame upon
myself.

--- a/src/static/base.css
+++ b/src/static/base.css
@@ -62,6 +62,8 @@ a:visited {
   display: inline-block;
   cursor: default;
   white-space: nowrap;
+}
+.logo {
   vertical-align: top;
 }
 a.logo-small {
